tests/testfiles/validated/invalid_programs/602_var_declaration_duplicata.c
int main() {
    int a = 0, b=10,c;
    c = a^b;
    int a = 10;
    return a;
}
